(images) Fix padding of astrometry header in tech card on mobile

--- a/astrobin/static/astrobin/scss/astrobin-mobile.scss
+++ b/astrobin/static/astrobin/scss/astrobin-mobile.scss
@@ -393,6 +393,12 @@
   .avatar-block .avatar {
     margin: 0 $spacer-medium;
   }
+
+  .technical-card {
+    .astrometry-header {
+      padding: 0 $spacer-large;
+    }
+  }
 }
 
 
